Fix style on small screen mobile.

--- a/client/www/css/mobile/main.less
+++ b/client/www/css/mobile/main.less
@@ -14,7 +14,7 @@
 
 .full-height {
     position: relative;
-    height: 100%;
+    min-height: 100%;
 
     .mobile.bottom {
         bottom: 0 !important;
@@ -147,6 +147,12 @@ a.icon:hover, a.icon:active, a.icon:focus {
 .bottom.stuck {
     position: absolute;
     bottom: 0;
+
+    .basic.button {
+        white-space: nowrap;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .b-profile.menu {
